Added activity indicator

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -9,7 +9,7 @@
   },
   "welcomeScreen": {
     "poweredBy": "POWERED BY BOWSER",
-    "readyForLaunch": "Ready for launch.",
+    "title": "Player Popularity",
     "continue": "CONTINUE"
   },
   "secondExampleScreen": {
